--- a/app/styles/modules/_work.scss
+++ b/app/styles/modules/_work.scss
@@ -6,7 +6,7 @@
   height: 100%;
   // background-color: $secondary;
   box-sizing: border-box;
-  background-image: url(../images/bg6.png);
+  background-image: url(../images/bg.png);
   background-repeat: no-repeat;
   background-position:50% 50%;
   background-size: cover;
