--- a/app/styles/partials/_colors.scss
+++ b/app/styles/partials/_colors.scss
@@ -17,7 +17,7 @@ $color_9: #4DB6AC;
 
 .color_0{
  background-color: $color_0;
- background-image: url(../images/bg_negative2.png);
+ background-image: url(../images/bg_negative.png);
  background-repeat: no-repeat;
  background-position:50% 50%;
  background-size: cover;
