--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -1,7 +1,7 @@
 #nav-box{
   position: fixed;
   z-index: 99;
-  width: 100%;
+  width: calc(100vw - 2rem);
   white-space: nowrap;
   color: #fff;
   padding-top: 0.5rem;
@@ -25,7 +25,7 @@
 
   .nav-links{
     float: right;
-    margin-right: 4rem;
+    margin-right: 2rem;
     text-align: right;
     @include breakpoint(medium down) {
       margin-right: 0;
