--- a/app/styles/modules/_links.scss
+++ b/app/styles/modules/_links.scss
@@ -83,6 +83,16 @@
       font-size: modular-scale(2, 0.5rem, 1.234)!important;
     }
   }
+
+  .text-content{
+    max-width: 50%;
+    margin-left: 25%;
+
+    @include breakpoint(medium down) {
+      max-width: 100%;
+      margin-left: 0%;
+    }
+  }
 }
 
 canvas{
@@ -107,36 +117,15 @@ canvas{
 
   @include breakpoint(medium down) {
     padding-top: 3rem;
-    font-size: modular-scale(1, 0.5rem, 1.234)!important;
-    h3{
-      font-size: modular-scale(1, 1rem, 1.234)!important;
-    }
-    p{
-      font-size: modular-scale(1, 0.5rem, 1.234)!important;
-    }
   }
 
 
   @include breakpoint(xlarge) {
     padding-top: 6rem;
-    font-size: modular-scale(4, 0.5rem, 1.234)!important;
-    h3{
-      font-size: modular-scale(4, 1rem, 1.234)!important;
-    }
-    p{
-      font-size: modular-scale(4, 0.5rem, 1.234)!important;
-    }
   }
 
   @include breakpoint(large) {
     padding-top: 6rem;
-    font-size: modular-scale(3, 0.5rem, 1.234)!important;
-    h3{
-      font-size: modular-scale(3, 1rem, 1.234)!important;
-    }
-    p{
-      font-size: modular-scale(3, 0.5rem, 1.234)!important;
-    }
   }
 
 
@@ -165,8 +154,7 @@ canvas{
   color: $white;
   height: 100%;
   z-index: 10;
-
-  padding-top: 10rem;
+  padding-top: 6rem;
 
   @include breakpoint(medium down) {
     padding-top: 1.5rem;
