--- a/app/styles/partials/_fontScales.scss
+++ b/app/styles/partials/_fontScales.scss
@@ -30,3 +30,36 @@
       font-size: modular-scale(5, 0.5rem, 1.234)!important;
   }
 }
+
+
+.mediumWithHeadline{
+  @include breakpoint(medium down) {
+    font-size: modular-scale(1, 0.5rem, 1.234)!important;
+    h3{
+      font-size: modular-scale(1, 1rem, 1.234)!important;
+    }
+    p{
+      font-size: modular-scale(1, 0.5rem, 1.234)!important;
+    }
+  }
+
+  @include breakpoint(xlarge) {
+    font-size: modular-scale(4, 0.5rem, 1.234)!important;
+    h3{
+      font-size: modular-scale(4, 1rem, 1.234)!important;
+    }
+    p{
+      font-size: modular-scale(4, 0.5rem, 1.234)!important;
+    }
+  }
+
+  @include breakpoint(large) {
+    font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    h3{
+      font-size: modular-scale(3, 1rem, 1.234)!important;
+    }
+    p{
+      font-size: modular-scale(3, 0.5rem, 1.234)!important;
+    }
+  }
+}
