--- a/app/styles/modules/_work.scss
+++ b/app/styles/modules/_work.scss
@@ -65,7 +65,7 @@
   background-image: url(../images/bg_small.png);
   background-repeat: no-repeat;
   background-position:57% 100%;
-  // background-size: cover;
+  background-size: cover;
 }
 
 
