--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -6,6 +6,13 @@
   color: #fff;
   padding-top: 0.5rem;
   pointer-events: none;
+  // @include breakpoint(medium) {
+  //   width: calc(100vw - 1rem);
+  // }
+
+  @include breakpoint(small down) {
+    width: calc(100vw - 1rem);
+  }
 
   span{
     @include breakpoint(medium down) {
