--- a/app/styles/modules/_about.scss
+++ b/app/styles/modules/_about.scss
@@ -12,7 +12,7 @@
   .aboutPic{
     margin-top: calc(5% + 1rem);
     position:relative;
-    background-image: url(../images/me.jpg);
+    background-image: url(../images/self.jpg);
     background-repeat: no-repeat;
     width: 100%;
     height: 0;
@@ -61,6 +61,7 @@
         color: #ffffff;
         display: inline-block;
         line-height: 2rem;
+
         @include breakpoint(small down) {
             width: 12rem;
             line-height: 1rem;
@@ -73,11 +74,15 @@
 
         @include breakpoint(large) {
             width: 19rem;
+            line-height: 2rem;
         }
 
         @include breakpoint(xlarge up) {
             width: 22rem;
+            line-height: 2rem;
         }
+
+
 
         .words{
           position: relative;
