--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -8,7 +8,8 @@
   height: 100vh;
   background-position:50% 50%;
   background-size: cover;
-  transition: transform 200ms linear;
+  transition: transform 160ms linear;
+  // transform: matrix(1, 0, 0, 1, 0, 0);
   // background-color: $primary;
   // transition: all 500ms ease;
 }
