--- a/app/styles/partials/_variables.scss
+++ b/app/styles/partials/_variables.scss
@@ -23,3 +23,12 @@ $semiBoldItalic: 'OpenSans-SemiBoldItalic';
 
 $typl8-serif-boolean: false !default;
 $typl8-custom-font: true !default;
+
+$light: 'SourceSansPro-Light';
+$regular: 'SourceSansPro-Regular';
+$bold: 'SourceSansPro-Bold';
+$semiBold: 'SourceSansPro-Semibold';
+$extraLight: 'SourceSansPro-ExtraLight';
+$black: 'SourceSansPro-Black';
+$blackItalic: 'SourceSansPro-BlackItalic';
+$italic: 'SourceSansPro-Italic';
