--- a/app/styles/partials/_colors.scss
+++ b/app/styles/partials/_colors.scss
@@ -4,6 +4,10 @@ $white: #fff;
 $primary: #ECEFF1;
 $secondary: #B0BEC5;
 
+$link: rgb(223, 223, 223);
+
+
+
 $color_0: #CFD8DC;
 $color_1: #E0F2F1;
 $color_2: #CDEAE8;
