--- a/app/styles/modules/_about.scss
+++ b/app/styles/modules/_about.scss
@@ -126,9 +126,36 @@
       letter-spacing: 2px;
       padding-bottom: 1rem;
       font-family: "OpenSans-Semibold", sans-serif;
-      a{
+
+      a {
+        position: relative;
         color: #000;
+        text-decoration: none;
+
+        &:active{
+          color: $link;
+          transition: all 0.1s ease-in-out 0s;
+        }
+
+        &:before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          bottom: 0;
+          left: 0;
+          background-color: #000;
+          visibility: hidden;
+          transform: scaleX(0);
+          transition: all 0.3s ease-in-out 0s;
+        }
+
+        &:hover:before {
+          visibility: visible;
+          transform: scaleX(1);
+        }
       }
+
     }
 
     div{
