--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -70,12 +70,20 @@
       }
     }
 
+
+    a:active {
+      span{
+        color: $link;
+        transition: all 0.1s ease-in-out 0s;
+      }
+    }
+
     .nav-line{
       display: block;
       position: absolute;
       left: 0;
       right: 0;
-      bottom: -1px;
+      // bottom: -1px;
       height: 2px;
       background-color: #000;
       -webkit-transform: scaleX(0);
