changes on pictures and some SASS improvements

--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -21,6 +21,7 @@ body{
   position: absolute;
   overflow-x: hidden;
   overflow-y: hidden;
+  font-family: "OpenSans-SemiBold", sans-serif;
 }
 
 html{
