--- a/app/styles/partials/_fonts.scss
+++ b/app/styles/partials/_fonts.scss
@@ -26,19 +26,19 @@ $font_dir: '../fonts/';
 }
 
 
-@include register-font('SourceSansPro-Regular');
-@include register-font('SourceSansPro-Light');
-@include register-font('SourceSansPro-Bold');
-@include register-font('SourceSansPro-Black');
-@include register-font('SourceSansPro-BlackItalic');
-@include register-font('SourceSansPro-Semibold');
-@include register-font('SourceSansPro-SemiboldItalic');
-@include register-font('SourceSansPro-LightItalic');
-@include register-font('SourceSansPro-ExtraLightItalic');
-@include register-font('SourceSansPro-Italic');
+// @include register-font('SourceSansPro-Regular');
+// @include register-font('SourceSansPro-Light');
+// @include register-font('SourceSansPro-Bold');
+// @include register-font('SourceSansPro-Black');
+// @include register-font('SourceSansPro-BlackItalic');
+// @include register-font('SourceSansPro-Semibold');
+// @include register-font('SourceSansPro-SemiboldItalic');
+// @include register-font('SourceSansPro-LightItalic');
+// @include register-font('SourceSansPro-ExtraLightItalic');
+// @include register-font('SourceSansPro-Italic');
 
-@include register-font('PoiretOne-Regular');
-
+// @include register-font('PoiretOne-Regular');
+//
 @include register-font('OpenSans-Regular');
 @include register-font('OpenSans-Bold');
 @include register-font('OpenSans-BoldItalic');
